# crankshaft-ui-slim

./: .clang-format  .gitignore  README.md  build.sh
.github/workflows/: ci.yml  codeql.yml  codspeed.yml
cmake_modules/: DebPackageFilename.cmake
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/comprehensive/: ANDROID_AUTO_PROJECTION.md
src/: AndroidAutoFacade.cpp  AndroidAutoFacade.h  AndroidAutoWebRtcReceiver.cpp  AndroidAutoWebRtcReceiver.h  AndroidAutoWebRtcSession.cpp  AndroidAutoWebRtcSession.h  AudioBridge.cpp  AudioBridge.h  AudioVolumeController.cpp  AudioVolumeController.h  BluetoothAdapter.cpp  BluetoothAdapter.h  CMakeLists.txt  ConnectionStateMachine.cpp  ConnectionStateMachine.h  CoreClient.cpp  CoreClient.h  DeviceManager.cpp  DeviceManager.h  DisplayBrightnessController.cpp  DisplayBrightnessController.h  ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h  PreferencesFacade.cpp  PreferencesFacade.h  PreferencesService.cpp  PreferencesService.h  ProjectionVideoRenderer.h  QVideoSinkProjectionVideoRenderer.cpp  QVideoSinkProjectionVideoRenderer.h  ServiceProvider.cpp  ServiceProvider.h  SettingsMigration.cpp  SettingsMigration.h  SlimUiApplicationRunner.cpp  SlimUiApplicationRunner.h  TouchEventForwarder.cpp  TouchEventForwarder.h  (+1 more)
src/benchmarks/: CMakeLists.txt  bench_error_handler.cpp  bench_logger.cpp  bench_preferences.cpp  bench_settings_migration.cpp
src/packaging/ui-slim/: crankshaft-ui-slim-display-setup.service  crankshaft-ui-slim-display-setup.sh  crankshaft-ui-slim.service  postinst  prerm
src/qml/: AAProjectionView.qml  ApplicationController.qml  ConnectionStatusView.qml  DeviceSelectionDialog.qml  ErrorDialog.qml  ReconnectionPrompt.qml  SettingsPanel.qml  Theme.qml  ThemeManager.qml  ViewNavigationController.qml  main.qml
src/qml/components/: ConnectionPreferenceToggle.qml  DisplayRotationToggle.qml  FactoryResetButton.qml  IconFontManager.qml  SegmentedOptionButton.qml  SettingsCard.qml  SettingsSlider.qml  ThemeToggle.qml  WebRtcVideoOutput.qml
src/qml/settings/: AudioSettingsTab.qml  BluetoothSettingsTab.qml  ConnectionSettingsTab.qml  DisplaySettingsTab.qml
src/tests/: CMakeLists.txt  test_android_auto_facade.cpp  test_architecture_decoupling.cpp  test_audio_failure_scenarios.cpp  test_connection_state_machine.cpp  test_core_mock_integration.cpp  test_preferences_facade.cpp  test_slim_settings_persistence.cpp
src/translations/: slim-ui.pro  slim-ui_en_GB.ts
